hihi david hoelzner

--- a/PARSEC.ipynb
+++ b/PARSEC.ipynb
@@ -832,14 +832,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 1/179 [00:04<12:06,  4.08s/it]"
+      "  0%|          | 0/179 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -850,21 +850,25 @@
     "Use an unbiased and journalistic tone. Do not repeat text. The summary must preserve any components useful for an open book exam so you can exceed the word limit if absolutely necessary.\n",
     "\"\"\"\n",
     "for i, row in tqdm(df.iterrows(), total=df.shape[0]):\n",
-    "    topic = row['topic']\n",
-    "    summary = row['summary']\n",
+    "    # add check in case of mid run failures\n",
+    "    if row['summary_strict']:\n",
+    "        continue\n",
+    "    else:\n",
+    "        topic = row['topic']\n",
+    "        summary = row['summary']\n",
     "\n",
-    "    prompt = f\"{base_prompt} topic: {topic}, content: {summary}\"\n",
-    "    \n",
-    "    # submit to llm for summarization\n",
-    "    response = completion(\n",
-    "        model=\"groq/llama3-70b-8192\", \n",
-    "        messages=[\n",
-    "            {\"role\": \"user\", \"content\": prompt}\n",
-    "        ],\n",
-    "    )\n",
+    "        prompt = f\"{base_prompt} topic: {topic}, content: {summary}\"\n",
+    "        \n",
+    "        # submit to llm for summarization\n",
+    "        response = completion(\n",
+    "            model=\"groq/llama3-70b-8192\", \n",
+    "            messages=[\n",
+    "                {\"role\": \"user\", \"content\": prompt}\n",
+    "            ],\n",
+    "        )\n",
     "\n",
     "\n",
-    "    df.at[i, 'summary_strict'] = response.choices[0].message.content"
+    "        df.at[i, 'summary_strict'] = response.choices[0].message.content"
    ]
   },
   {
